right click brainstorming

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <div id = "playground"></div>
     <div id = "msg"></div>
+    <div id = "msgRight"></div>
     <div id = "sidebar">
       Inventory:
       <div id = "inventory"></div>
@@ -33,12 +34,14 @@
         <div id = "shop-sell"></div>
       </div>
     </div>
+
     <div class = "description">
       Check out the Github repo <a href = "http://github.com/robbrit/jarm" target = "_blank">here</a>.
       Find a bug or have a suggestion? Submit it on the
       <a href = "http://github.com/robbrit/jarm/issues" target = "_blank">issues page</a>.
     </div>
     <script type = "text/javascript" src = "jquery-1.4.2.min.js"></script>
+    <script type = "text/javascript" src = "jquery.rightClick.js"></script>
     <script type = "text/javascript" src = "jquery.gamequery-0.4.0.js"></script>
     <script type = "text/javascript" src = "jquery.gamequery.ext.js"></script>
     <script type = "text/javascript" src = "helpers.js"></script>
