--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   </head>
   <body>
     <div id="playground">
-		<div id="welcomeScreen" style="background: url(./images/startscreen.jpg); width: 600px; height: 600px; position: absolute; z-index: 100;">
-			<div style="position: absolute; top: 320px; width: 600px; color: white;">
-				<div id="loadingBar" style="position: relative; left: 100px; height: 15px; width: 0px; background: red;"></div><br />
+		<div id="welcomeScreen">
+			<div id="welcomeScreenWrap"> 	
+				<div id="loadingBar"></div><br />
 				<center><a style="cursor: pointer;" id="startbutton">Click here to start!</a></center>
-
 			</div>
 		</div>    
     </div>
